RESOLVED FIXED183095
[Curl] Cookies are not being added to the Cookie field in Request Headers
https://bugs.webkit.org/show_bug.cgi?id=183095
Summary [Curl] Cookies are not being added to the Cookie field in Request Headers
Christopher Reid
Reported 2018-02-23 14:56:00 PST
Now that libcurl is not handling cookies, we need to handle this header field ourselves.
Attachments
patch (1.84 KB, patch)
2018-02-23 17:29 PST, Christopher Reid
no flags
Patch (3.70 KB, patch)
2018-02-23 17:41 PST, Christopher Reid
no flags
Christopher Reid
Comment 1 2018-02-23 17:29:20 PST
Christopher Reid
Comment 2 2018-02-23 17:41:05 PST
Created attachment 334558 [details] Patch Uploading the right patch this time
WebKit Commit Bot
Comment 3 2018-02-26 12:02:45 PST
Comment on attachment 334558 [details] Patch Clearing flags on attachment: 334558 Committed r229032: <https://trac.webkit.org/changeset/229032>
WebKit Commit Bot
Comment 4 2018-02-26 12:02:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-02-26 12:03:43 PST
Note You need to log in before you can comment on or make changes to this bug.