[Curl] Cookies are not being added to the Cookie field in Request Headers https://bugs.webkit.org/show_bug.cgi?id=183095

Patch by Christopher Reid <chris.reid@sony.com> on 2018-02-26
Reviewed by Alex Christensen.

Populating the Cookie request header field now that cookies are no longer handled in libcurl.

* platform/network/curl/CookieJarCurlDatabase.cpp: Renaming the httpOnly variable as its actual use wasn't clear
* platform/network/curl/ResourceHandleCurl.cpp:

Canonical link: https://commits.webkit.org/198852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229032 268f45cc-cd09-0410-ab3c-d52691b4dbfc